--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -707,6 +707,11 @@ ru:
       sort_order:
         nearby: Около
         relevance: Релевантность
+      residency_status:
+        before_the_asylum_decision: 
+        with_a_residence_permit: 
+        with_deportation_decision: 
+        with_temporary_suspension_of_deportation: 
   formtastic:
     required: required
   free: 
@@ -784,6 +789,7 @@ ru:
         language: Язык
         sort: Сортировка по
         target_audience: Помощь для кого?
+        residency_status: 
       option_any: все равно
       pagination:
         back: Назад
@@ -796,8 +802,6 @@ ru:
         categories: категории
         filter: Фильтр
         map: карта
-      more_info_button: 
-      more_info_text: 
     search_results:
       bridge: для
       enclosing: найдено
@@ -1002,15 +1006,6 @@ ru:
             предложения для других городов. Мы будем рады твоей помощи:
             ты что-либо заметил, что нам стоит улучшить? Или что-то
             рабоатет не правильно? Тогда
-        more_information_overlay: 
-        popup:
-          button: Да, пожалуйста
-          email_placeholder: E-Mail адрес *
-          footer: Твое имя и адрес электронной почты будут использованы только в цели установления контакта. Ты не подписываешься на электронную рассылку и твои данные не будут переданы третьим лицам.
-          headline: 20 евро за твое мнение
-          message: Ich möchte an der Umfrage teilnehmen
-          name_placeholder: Имя *
-          text: Скажите, что мы можем улучшить. Или то, что тебе действительно нравится. Мы будем рады созвониться с тобой. Можно выслать тебе E-Mail с деталями?
         send: 
         unavailable_location_modal: "Для твоего местонахождения на данный момент у clarat есть только\nпомощь по телефону или он-лайн. Это значит, тебе помогут по телефону \nили по интернету. Например по E-Mail или в чате. Мы тебе обязательно\nсообщим, как только у clarat появится для тебя помощь рядом с тобой.\nДля этого введи здесь свой E-Mail адрес.\n"
       nav_lang:
@@ -1068,6 +1063,26 @@ ru:
       hero:
         claim:
           family: Предложения о помощи детям, молодежи и семьям
+      callout:
+        callout:
+          callout:
+            family:
+              how:
+                heading: 
+              who:
+                text: 
+            how:
+              text: 
+            refugees:
+              how:
+                heading: 
+              who:
+                text: 
+            what:
+              heading: 
+              text: 
+            who:
+              heading: 
     widget:
       category_headline: 
   offer:
@@ -1116,6 +1131,18 @@ ru:
             parents: для родителей
             pregnant_woman: для беременных
             relatives: для знакомых и родственников
+            family_everyone: 
+            refugees_children: для детей-беженцев
+            refugees_families: для семей-беженцев
+            refugees_general: для беженцев
+            refugees_parents: для родителей-беженцев
+            refugees_parents_to_be: для будущих родителей-беженцев
+            refugees_uf: для беспризорных беженцев
+          residency_status:
+            before_the_asylum_decision: в процессе предоставления убежища
+            with_a_residence_permit: с видом на жительство
+            with_deportation_decision: с заключением о депортации
+            with_temporary_suspension_of_deportation: с правом на кратковременное пребывание в стране
       map_sidebar:
         map_output_searchresults: Вывод результатов поиска на карту
       noscript_warning: |
@@ -1362,6 +1389,29 @@ ru:
       why:
         heading: Для чего существует clarat?
         text: clarat помогает найти необходимую помощь. В Германии существует множество организаций по поддержке детей, молодежи и семей, а так же для помощи беженцам. Однако часто их довольно сложно найти. Именно в этом мы и помогаем. Если речь идет о семейных вопросах и проблемах, тебе нужно в clarat family (кларат фэмили). Если о беженцах - clarat refugees (кларат рефюджис).
+      callout:
+        "#{@current_section}":
+          who:
+            text: 
+        family:
+          how:
+            heading: 
+          who:
+            text: 
+        how:
+          heading: 
+          text: 
+        refugees:
+          how:
+            heading: 
+          who:
+            text: 
+        what:
+          heading: 
+          text: 
+        who:
+          heading: 
+          text: 
     impressum:
       heading: Impressum
       notice: clarat — это поисковик. clarat скажет вам, где вы можете получить помощь. Например, где вы найдете специалистов, которые помогут с вашей проблемой. clarat также может помочь вам в ваших поисках.
