--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -607,6 +607,11 @@ tr:
       sort_order:
         nearby: Nearby
         relevance: Relevance
+      residency_status:
+        before_the_asylum_decision: 
+        with_a_residence_permit: 
+        with_deportation_decision: 
+        with_temporary_suspension_of_deportation: 
   formtastic:
     required: required
   free: 
@@ -684,6 +689,7 @@ tr:
         language: Dil
         sort: Göre sırala
         target_audience: Kim için destek?
+        residency_status: 
       option_any: fark etmez
       pagination:
         back: geri
@@ -696,8 +702,6 @@ tr:
         categories: Kategoriler
         filter: filtre
         map: Harita
-      more_info_button: 
-      more_info_text: 
     search_results:
       bridge: için
       enclosing: bulundu
@@ -890,15 +894,6 @@ tr:
             clarat.org adlı internet sayfamız henüz yenidir. Yakında başka şehirler için de yardım çeşitleri sunabileceğiz.
             Desteğinden ötürü mutlulu duyarız: Daha iyi yapabileceğimiz bir şey mi var? Ya da düzgün çalışmayan
             bir şey? o halde
-        more_information_overlay: 
-        popup:
-          button: 
-          email_placeholder: E-Mail Adresi *
-          footer: 
-          headline: 
-          message: Ich möchte an der Umfrage teilnehmen
-          name_placeholder: İsim *
-          text: 
         send: 
         unavailable_location_modal: |
           Bulunduğun yer için clarat'ta şuan yalnızca telefon desteği ya da online yardımlar bulunmaktadır.
@@ -960,6 +955,26 @@ tr:
       hero:
         claim:
           family: Çocuklar, gençler ve aileler için yardıum çeşitleri
+      callout:
+        callout:
+          callout:
+            family:
+              how:
+                heading: 
+              who:
+                text: 
+            how:
+              text: 
+            refugees:
+              how:
+                heading: 
+              who:
+                text: 
+            what:
+              heading: 
+              text: 
+            who:
+              heading: 
     widget:
       category_headline: 
   offer:
@@ -1006,6 +1021,18 @@ tr:
             parents: Ebeveynler için
             pregnant_woman: Hamileler için
             relatives: Tanıdık ve akrabalar için
+            family_everyone: 
+            refugees_children: Kaçan çocuklar için
+            refugees_families: Kaçan aileler için
+            refugees_general: Mülteciler için
+            refugees_parents: Kaçan ebeveynler için
+            refugees_parents_to_be: ebeveyn olacak mülteciler için
+            refugees_uf: sahipsiz, reşit olmayan mülteciler için
+          residency_status:
+            before_the_asylum_decision: iltica prosedüründe
+            with_a_residence_permit: oturma izni ile
+            with_deportation_decision: sınırdışı belgesi ile
+            with_temporary_suspension_of_deportation: müsamaha ile
       map_sidebar:
         map_output_searchresults: Aramalarını haritaya dök
       noscript_warning: |
@@ -1255,6 +1282,29 @@ tr:
       why:
         heading: Clarat neden var?
         text: Clarat ile kolayca aradığın yardımı bulabilirsin. Almanya’da çocuklar, gençler ve ailelere destek olan cok çeşitli teklifler var. Bunların yanı sıra mülteciler için de bir çok imkan var ancak bunları bulmak kolay değil. İşte sana tam da bu aşamada yardımcı oluyoruz. Ailevi konularda clarat family’ye, sığınma konuları hakkında clarat refugees’e başvurabilirsin.
+      callout:
+        "#{@current_section}":
+          who:
+            text: 
+        family:
+          how:
+            heading: 
+          who:
+            text: 
+        how:
+          heading: 
+          text: 
+        refugees:
+          how:
+            heading: 
+          who:
+            text: 
+        what:
+          heading: 
+          text: 
+        who:
+          heading: 
+          text: 
     impressum:
       heading: Impressum
       notice: clarat ist eine Suchmaschine. clarat sagt dir, wo du Hilfe bekommst. Zum Beispiel, wo du einen Experten findest, der dir bei deinem Problem hilft. clarat selber kann dir nur beim Suchen helfen.
