--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -683,6 +683,11 @@ fr:
       sort_order:
         nearby: À proximité
         relevance: Pertinence
+      residency_status:
+        before_the_asylum_decision: 
+        with_a_residence_permit: 
+        with_deportation_decision: 
+        with_temporary_suspension_of_deportation: 
   formtastic:
     required: required
   free: 
@@ -755,6 +760,7 @@ fr:
         language: Langue
         sort: Trier par
         target_audience: De l'aide pour qui?
+        residency_status: 
       option_any: égal
       pagination:
         back: Retour
@@ -767,8 +773,6 @@ fr:
         categories: Catégories
         filter: Filtre
         map: Carte
-      more_info_button: 
-      more_info_text: 
     search_results:
       bridge: pour le terme de recherche
       enclosing: trouvé
@@ -970,15 +974,6 @@ fr:
         beta_modal:
           link: écris-nous tout simplement un message
           text: Notre site internet clarat.org est encore tout nouveau. Pour Berlin, tu peux déjà trouver beaucoup de offres d'aide. Bientôt , nous allons collecter aussi des listes d'aide pour d'autres villes. Nous nous réjouissons que tu aides si tu vois quelque chose que nous pourrions améliorer ou qui ne fonctionne pas correctement. donc
-        more_information_overlay: 
-        popup:
-          button: 
-          email_placeholder: Adresse électronique *
-          footer: 
-          headline: 
-          message: Ich möchte an der Umfrage teilnehmen
-          name_placeholder: Nom *
-          text: 
         send: 
         unavailable_location_modal: "Pour ta localisation, il n'y a actuellement sur clarat que des services téléphoniques ou en ligne. C'est-à-dire, qu'on aide par téléphone ou en ligne. Par exemple par e-mail ou sur une discussion en ligne. Nous t'informons volontiers dès qu'il y aura de l'aide tout proche de chez toi. \nTape ton adresse e-mail ici"
       nav_lang:
@@ -1032,6 +1027,26 @@ fr:
       hero:
         claim:
           family: Offres d'aide pour les enfants, les ados et les familles
+      callout:
+        callout:
+          callout:
+            family:
+              how:
+                heading: 
+              who:
+                text: 
+            how:
+              text: 
+            refugees:
+              how:
+                heading: 
+              who:
+                text: 
+            what:
+              heading: 
+              text: 
+            who:
+              heading: 
     widget:
       category_headline: 
   offer:
@@ -1078,6 +1093,18 @@ fr:
             parents: pour les parents
             pregnant_woman: pour les femmes enceintes
             relatives: pour les connaissances ou la parenté
+            family_everyone: 
+            refugees_children: pour des enfants réfugiés
+            refugees_families: pour des familles réfugiées
+            refugees_general: pour des réfugiés
+            refugees_parents: pour des parents réfugiés
+            refugees_parents_to_be: pour des futurs parents réfugiés
+            refugees_uf: pour des réfugiés non-accompagnés
+          residency_status:
+            before_the_asylum_decision: dans une procédure de demande d'asile
+            with_a_residence_permit: avec permis de séjour
+            with_deportation_decision: avec décision d'expulsion
+            with_temporary_suspension_of_deportation: avec un certificat de tolérance
       map_sidebar:
         map_output_searchresults: émission de cartes des résultats de recherches
       noscript_warning: Nous sommes désolés, mais pour pouvoir utiliser nos recherches, tu dois avoir activé ton Bowser JavaScript.
@@ -1321,6 +1348,29 @@ fr:
       why:
         heading: Clarat, pourquoi ça existe?
         text: Avec clarat on peut facilement trouver de l’aide. En Allemagne, il y a beaucoup d'offres d'aide pour les enfants, les ados et les familles. Aussi pour les réfugiés. Mais ils ne sont pas toujours faciles à trouver. Nous allons t’aider.  S’il est question de sujets ayant trait à la famille, va sur clarat family. S’il est question de sujets ayant trait aux réfugiés, va sur clarat refugees.
+      callout:
+        "#{@current_section}":
+          who:
+            text: 
+        family:
+          how:
+            heading: 
+          who:
+            text: 
+        how:
+          heading: 
+          text: 
+        refugees:
+          how:
+            heading: 
+          who:
+            text: 
+        what:
+          heading: 
+          text: 
+        who:
+          heading: 
+          text: 
     impressum:
       heading: Impressum
       notice: clarat est un moteur de recherche. clarat te dit où tu peux trouver de l'aide. Par exemple, où tu peux trouver un expert capable de t'aider à résoudre ton problème. clarat peut seulement t'aider à effectuer ta recherche.
