--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -731,6 +731,11 @@ pl:
       sort_order:
         nearby: Blisko
         relevance: W związku z tematem
+      residency_status:
+        before_the_asylum_decision: 
+        with_a_residence_permit: 
+        with_deportation_decision: 
+        with_temporary_suspension_of_deportation: 
   formtastic:
     required: required
   free: 
@@ -803,6 +808,7 @@ pl:
         language: Język
         sort: Sortuj według
         target_audience: Pomoc dla kogo?
+        residency_status: 
       option_any: obojętne
       pagination:
         back: Wróć
@@ -815,8 +821,6 @@ pl:
         categories: Kategorie
         filter: Filtr
         map: Mapa
-      more_info_button: 
-      more_info_text: 
     search_results:
       bridge: dla zapytania
       enclosing: znaleziono
@@ -1014,15 +1018,6 @@ pl:
         beta_modal:
           link: po prostu napisz do nas wiadomość
           text: 'Nasza strona internetowa clarat.org jest jeszcze całkiem nowa. Możesz już znaleźć wiele ofert pomocy w Berlinie. Wkrótce zbierzemy też oferty pomocy dla innych miast. Będziemy wdzięczni za pomoc: Zauważyłeś coś, co moglibyśmy zrobić lepiej? Albo coś funkcjonuje nie tak, jak powinno? W takim razie'
-        more_information_overlay: 
-        popup:
-          button: 
-          email_placeholder: adres e-mail *
-          footer: 
-          headline: 
-          message: Ich möchte an der Umfrage teilnehmen
-          name_placeholder: Imię *
-          text: 
         send: 
         unavailable_location_modal: Dla Twojej lokalizacji mamy aktualnie w clarat wyłącznie oferty telefoniczne i oferty online. To znaczy, otrzymasz pomoc telefoniczną lub online, na przykład przez e-mail lub za pomocą chatu. Chętnie damy Ci znać, kiedy pojawią się oferty pomocy w Twojej okolicy. W tym celu wpisz adres e-mail.
       nav_lang:
@@ -1076,6 +1071,26 @@ pl:
       hero:
         claim:
           family: Oferty wsparcia dla dzieci, młodzieży i rodzin
+      callout:
+        callout:
+          callout:
+            family:
+              how:
+                heading: 
+              who:
+                text: 
+            how:
+              text: 
+            refugees:
+              how:
+                heading: 
+              who:
+                text: 
+            what:
+              heading: 
+              text: 
+            who:
+              heading: 
     widget:
       category_headline: 
   offer:
@@ -1124,6 +1139,18 @@ pl:
             parents: dla rodziców
             pregnant_woman: Dla kobiet w ciąży
             relatives: dla znajomych i krewnych
+            family_everyone: 
+            refugees_children: dla uchodźców-dzieci
+            refugees_families: dla uchodźców-rodzin
+            refugees_general: dla uchodźców
+            refugees_parents: dla uchodźców-rodziców
+            refugees_parents_to_be: dla zbiegłych przyszłych rodziców
+            refugees_uf: dla niepełnoletnich uchodźców bez opieki
+          residency_status:
+            before_the_asylum_decision: w trakcie procedury azylowej
+            with_a_residence_permit: z pozwoleniem na pobyt
+            with_deportation_decision: z zawiadomieniem o deportacji
+            with_temporary_suspension_of_deportation: z pobytem tolerowanym
       map_sidebar:
         map_output_searchresults: Widok wyników wyszukiwania na mapie
       noscript_warning: Przykro nam, Twoja wyszukiwarka musi mieć aktywny JavaScript, abyś mógł rozpocząć wyszukiwanie.
@@ -1367,6 +1394,29 @@ pl:
       why:
         heading: Dlaczego istnieje clarat?
         text: Z clarat można łatwo znaleźć pomoc. W Niemczech jest bardzo dużo ofert wspomagających dzieci, młodzież i rodziny. Również wiele ofert dla uchodźców. Często są one trudne do znalezienia. My Ci w tym pomożemy. Jeżeli chodzi o zagadnienia rodzinne, szukaj w clarat family. Jeśli o sprawy uchodźców, szukaj w clarat refugees.
+      callout:
+        "#{@current_section}":
+          who:
+            text: 
+        family:
+          how:
+            heading: 
+          who:
+            text: 
+        how:
+          heading: 
+          text: 
+        refugees:
+          how:
+            heading: 
+          who:
+            text: 
+        what:
+          heading: 
+          text: 
+        who:
+          heading: 
+          text: 
     impressum:
       heading: Impressum
       notice: Clarat jest wyszukiwarką. Clarat powie Ci, gdzie można uzyskać pomoc. Na przykład, gdzie znaleźć eksperta, który pomoże Ci z Twoim problemem.. Sam clarat pomoże Ci tylko w poszukiwaniach.
